--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,9 +6,11 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.25",
     "@fortawesome/free-solid-svg-icons": "^5.11.2",
     "@fortawesome/react-fontawesome": "^0.1.7",
+    "@toast-ui/react-image-editor": "^1.0.1",
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
     "css-loader": "^3.2.0",
+    "fabric": "^3.5.1",
     "fontawesome": "^5.6.3",
     "google-map-react": "^1.1.5",
     "jwt-decode": "^2.2.0",
