--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,9 +6,11 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.25",
     "@fortawesome/free-solid-svg-icons": "^5.11.2",
     "@fortawesome/react-fontawesome": "^0.1.7",
+    "@toast-ui/react-editor": "^1.0.1",
     "@toast-ui/react-image-editor": "^1.0.1",
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
+    "core-js": "^3.6.1",
     "css-loader": "^3.2.0",
     "fabric": "^3.5.1",
     "fontawesome": "^5.6.3",
@@ -23,9 +25,9 @@
     "react-google-places-autocomplete": "^1.6.1",
     "react-image-crop": "^8.4.0",
     "react-image-cropper": "^1.3.0",
+    "react-images": "^1.1.0-beta.0",
     "react-images-upload": "^1.2.7",
     "react-images-uploader": "^1.2.0-rc1",
-    "react-images-viewer": "https://github.com/mscully4/react-images-viewer/tarball/master",
     "react-popper-tooltip": "^2.10.0",
     "react-progress-button": "^5.1.0",
     "react-scripts": "^3.3.0",
@@ -54,5 +56,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "ws": "3.3.2"
   }
 }
