--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
-Django==2.2.7
+asgiref==3.2.3
+Django==3.0.1
 django-cors-headers==3.2.0
-djangorestframework==3.10.3
+djangorestframework==3.11.0
 djangorestframework-jwt==1.11.0
-gunicorn==19.9.0
+Pillow==7.0.0
+pkg-resources==0.0.0
 PyJWT==1.7.1
 pytz==2019.3
 sqlparse==0.3.0
