--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.25",
     "@fortawesome/free-solid-svg-icons": "^5.11.2",
     "@fortawesome/react-fontawesome": "^0.1.7",
+    "@material-ui/styles": "^4.8.2",
     "@toast-ui/react-editor": "^1.0.1",
     "@toast-ui/react-image-editor": "^1.0.1",
     "axios": "^0.19.0",
@@ -13,6 +14,7 @@
     "core-js": "^3.6.1",
     "css-loader": "^3.2.0",
     "fabric": "^3.5.1",
+    "flag-icon-css": "^3.4.5",
     "fontawesome": "^5.6.3",
     "google-map-react": "^1.1.5",
     "jwt-decode": "^2.2.0",
@@ -21,6 +23,8 @@
     "react-aws-s3": "^1.3.0",
     "react-controllables": "^0.6.0",
     "react-cropper": "^1.3.0",
+    "react-custom-scrollbar": "^1.0.0",
+    "react-custom-scrollbars": "^4.2.1",
     "react-dimensions": "^1.3.1",
     "react-dom": "^16.11.0",
     "react-google-places-autocomplete": "^1.6.1",
@@ -29,10 +33,13 @@
     "react-images": "^1.1.0-beta.0",
     "react-images-upload": "^1.2.7",
     "react-images-uploader": "^1.2.0-rc1",
+    "react-loader-spinner": "^3.1.5",
+    "react-photo-gallery": "^8.0.0",
     "react-popper-tooltip": "^2.10.0",
     "react-progress-button": "^5.1.0",
     "react-scripts": "^3.3.0",
     "react-tooltip": "^3.11.1",
+    "react-virtualized": "^9.21.2",
     "reactstrap": "^8.1.1",
     "semantic-ui-react": "^0.88.1",
     "style-loader": "^1.0.0"
@@ -60,5 +67,10 @@
   },
   "devDependencies": {
     "ws": "3.3.2"
+  },
+  "babel": {
+    "ignore": [
+      "node_modules/aws-sdk/dist/aws-sdk-react-native.js"
+    ]
   }
 }
