--- a/frontend/package.json
+++ b/frontend/package.json
@@ -37,6 +37,7 @@
     "react-photo-gallery": "^8.0.0",
     "react-popper-tooltip": "^2.10.0",
     "react-progress-button": "^5.1.0",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "^3.3.0",
     "react-tooltip": "^3.11.1",
     "react-virtualized": "^9.21.2",
