--- a/frontend/package.json
+++ b/frontend/package.json
@@ -39,6 +39,7 @@
     "react-progress-button": "^5.1.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.3.0",
+    "react-sliding-pane": "^4.0.1",
     "react-tooltip": "^3.11.1",
     "react-virtualized": "^9.21.2",
     "reactstrap": "^8.1.1",
