--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
     "react-custom-scrollbars": "^4.2.1",
     "react-dimensions": "^1.3.1",
     "react-dom": "^16.11.0",
+    "react-dropdown-select": "^3.11.0",
     "react-google-places-autocomplete": "^1.6.1",
     "react-image-crop": "^8.4.0",
     "react-image-cropper": "^1.3.0",
@@ -39,6 +40,7 @@
     "react-progress-button": "^5.1.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.3.0",
+    "react-select": "^3.0.8",
     "react-sliding-pane": "^4.0.1",
     "react-tooltip": "^3.11.1",
     "react-virtualized": "^9.21.2",
