--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "jwt-decode": "^2.2.0",
     "react": "^16.11.0",
     "react-addons-update": "^15.6.2",
+    "react-autocomplete": "^1.8.1",
     "react-aws-s3": "^1.3.0",
     "react-controllables": "^0.6.0",
     "react-cropper": "^1.3.0",
