--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,7 @@
     "react-dimensions": "^1.3.1",
     "react-dom": "^16.11.0",
     "react-dropdown-select": "^3.11.0",
+    "react-dropzone": "^10.2.1",
     "react-google-places-autocomplete": "^1.6.1",
     "react-image-crop": "^8.4.0",
     "react-image-cropper": "^1.3.0",
