--- a/frontend/package.json
+++ b/frontend/package.json
@@ -48,7 +48,8 @@
     "react-virtualized": "^9.21.2",
     "reactstrap": "^8.1.1",
     "semantic-ui-react": "^0.88.1",
-    "style-loader": "^1.0.0"
+    "style-loader": "^1.0.0",
+    "typeface-pacifico": "^1.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
