--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -5,4 +5,6 @@
 
 FROM nginx:latest
 COPY ./build/ /usr/share/nginx/html
+RUN rm /etc/nginx/conf.d/default.conf
+COPY nginx/nginx.conf /etc/nginx/conf.d
 EXPOSE 80
