--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,7 +1,9 @@
 {
   "name": "frontend",
   "version": "0.1.0",
+  "hostname": ".",
   "private": true,
+  "homepage": ".",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.25",
     "@fortawesome/free-solid-svg-icons": "^5.11.2",
