--- a/ingress.yaml
+++ b/ingress.yaml
@@ -3,18 +3,17 @@ kind: Ingress
 metadata:
   name: ingress
   annotations:
-    # ingress.kubernetes.io/query-routing: default/query-routing
-    nginx.ingress.kubernetes.io/rewrite-target: /$2
+    nginx.ingress.kubernetes.io/rewrite-target: /$1
 spec: 
   rules: 
     - host: scrapmap.info
       http:
         paths:
-          # - path: /backend(/|$)(.*)
-          #   backend: 
-          #     serviceName: backend-nodeport
-          #     servicePort: 8080
-          - path: /?(.*)
+          - path: /backend/(.*)
+            backend: 
+              serviceName: backend-nodeport
+              servicePort: 8080
+          - path: /(.*)
             backend:
               serviceName: frontend-nodeport
               servicePort: 80
