--- a/backend-deployment.yaml
+++ b/backend-deployment.yaml
@@ -6,70 +6,80 @@ metadata:
     app: backend-deployment
 spec:
   replicas: 1
+  #Wait 60 seconds before declaring a pod to be ready
+  minReadySeconds: 60
   selector:
     matchLabels:
       app: backend-pods
+  strategy: 
+    rollingUpdate:
+      #Only allows one additional pod to be created over the specified replica count
+      maxSurge: 1
+      #The number of pods available must be at least the specified replica count minus 0
+      maxUnavailable: 0
+    type: RollingUpdate
   template:
     metadata:
       labels:
         app: backend-pods
     spec:
       containers:
-        - name: backend-pod
-          livenessProbe:
-            httpGet:
-              path: /liveliness
-              port: 8080
-            initialDelaySeconds: 20
-            timeoutSeconds: 3
-          image: gcr.io/scrapmap/backend
-        # This setting makes nodes pull the docker image every time before
-        # starting the pod. This is useful when debugging, but should be turned
-        # off in production.
-          imagePullPolicy: Always
-        # env:
-        #     # [START cloudsql_secrets]
-        #     - name: DATABASE_USER
-        #       valueFrom:
-        #         secretKeyRef:
-        #           name: cloudsql
-        #           key: username
-        #     - name: DATABASE_PASSWORD
-        #       valueFrom:
-        #         secretKeyRef:
-        #           name: cloudsql
-        #           key: password
-        #     # [END cloudsql_secrets]
-        # ports:
-        # - containerPort: 8079
+      - name: backend-pod
+        # image: gcr.io/scrapmap/backend:latest
+        image: gcr.io/scrapmap-277602/backend:latest
+        volumeMounts:
+          - name: database-credentials
+            mountPath: /secrets/cloudsql
+            readOnly: true
+        #Tests whether the pod is still responsive
+        livenessProbe:
+          httpGet:
+            path: /liveliness
+            port: 8080
+          #Wait 30 seconds before probing
+          initialDelaySeconds: 30
+          #Probe request times out after 3 seconds
+          timeoutSeconds: 3
+        #Tests whether the pod is ready to serve requests
+        readinessProbe:
+          #Probe will be executed every 3 seconds
+          periodSeconds: 3
+          httpGet:
+            path: /readiness
+            port: 8080
+        #Always re-pull the container image when the pod is starting up
+        imagePullPolicy: Always
+        ports:
+        - containerPort: 8080
 
       # [START proxy_container]
-      # - image: gcr.io/cloudsql-docker/gce-proxy:1.16
-      #   name: cloudsql-proxy
-      #   command: ["/cloud_sql_proxy", "--dir=/cloudsql",
-      #             "-instances=gcp-cloud-tutorial-69:us-east1:scrapmap-test=tcp:5432",
-      #             "-credential_file=/secrets/cloudsql/credentials.json"]
-      #   volumeMounts:
-      #     - name: cloudsql-oauth-credentials
-      #       mountPath: /secrets/cloudsql
-      #       readOnly: true
-      #     - name: ssl-certs
-      #       mountPath: /etc/ssl/certs
-      #     - name: cloudsql
-      #       mountPath: /cloudsql
+      - image: gcr.io/cloudsql-docker/gce-proxy:1.16
+        name: cloudsql-proxy
+        command: ["/cloud_sql_proxy", "--dir=/cloudsql",
+                  "-instances=scrapmap-277602:us-central1:scrapmap=tcp:5432",
+                  "-credential_file=/secrets/cloudsql/credentials.json"]
+        volumeMounts:
+          - name: cloudsql-oauth-credentials
+            mountPath: /secrets/cloudsql
+            readOnly: true
+          - name: ssl-certs
+            mountPath: /etc/ssl/certs
+          - name: database-credentials
+            mountPath: /cloudsql
       # [END proxy_container] 
-      # # [START frontend ]
-      # - name: frontend
-      #   image: gcr.io/gcp-cloud-tutorial-69/scrapmap-frontend
-      #   imagePullPolicy: Always
-      #   ports:
-      #     - containerPort: 8080
-      # # [END frontend ]
       # [START volumes]
-      # volumes:
-      #   - name: cloudsql-oauth-credentials
-      #     secret:
-      #       secretName: cloudsql-oauth-credentials
+      volumes:
+        - name: database-credentials
+          secret:
+            secretName: database-credentials
+        - name: cloudsql-oauth-credentials
+          secret:
+            secretName: cloudsql-oauth-credentials
+        - name: ssl-certs
+          hostPath:
+            path: /etc/ssl/certs
+      imagePullSecrets:
+        - name: gcr
       #   - name: ssl-certs
       #     hostPath:
       #       path: /etc/ssl/certs
