--- a/ingress.yaml
+++ b/ingress.yaml
@@ -6,8 +6,8 @@ metadata:
     nginx.ingress.kubernetes.io/rewrite-target: /$1
 spec: 
   rules: 
-    - host: scrapmap.info
-      http:
+    # - host: scrapmap.info
+    -  http:
         paths:
           - path: /backend/(.*)
             backend: 
