--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+the-big-username-blacklist==1.5.4
 asgiref==3.2.3
 autopep8==1.5.1
 boto3==1.12.26
@@ -14,6 +15,7 @@ image==1.5.27
 jmespath==0.9.5
 Pillow==7.0.0
 pycodestyle==2.5.0
+psycopg2-binary==2.8.5
 PyJWT==1.7.1
 python-dateutil==2.8.1
 pytz==2019.3
