--- a/backend-lb.yaml
+++ b/backend-lb.yaml
@@ -1,13 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: backend-nodeport
+  name: backend-lb
   labels:
-    app: backend-nodeport
+    app: backend-lb
 spec:
-  type: NodePort
+  type: LoadBalancer
   ports:
-  - port: 8000
+  - port: 8080
     targetPort: 8080
   selector:
     app: backend-pods
